[tool.poetry]
name = "youtube-history-analysis"
version = "1.1.0"
description = "See how your YouTube interests evolved over time"
authors = [
    "Armanc Keser <armanckeser@hotmail.com>",
]
license = "MIT"
readme = "README.md"

documentation = "https://armanckeser.github.io/youtube-history-analysis"
homepage = "https://armanckeser.github.io/youtube-history-analysis"
repository = "https://github.com/armanckeser/youtube-history-analysis"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "youtube_history_analysis", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
numpy = "^1.23.5"
pandas = "^1.5.2"
google-api-python-client = "^2.68.0"
matplotlib = "^3.6.2"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"
google-api-python-client-stubs = "^1.13.0"
pandas-stubs = "^1.5.2.221124"
data-science-types = "^0.2.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov youtube_history_analysis \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
